Nicer implementation of user-provided config files for TS and cleanups